--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,8 +37,9 @@
         "core-js": "^3.0.0",
         "dotenv": "^16.0.1",
         "gatsby": "^4.21.1",
+        "gatsby-graphql-sharp": "^1.1.4",
         "gatsby-plugin-google-analytics": "^4.21.0",
-        "gatsby-plugin-image": "^2.21.0",
+        "gatsby-plugin-image": "^2.24.0",
         "gatsby-plugin-manifest": "^4.21.0",
         "gatsby-plugin-netlify": "^5.0.1",
         "gatsby-plugin-offline": "^5.21.0",
@@ -46,15 +47,16 @@
         "gatsby-plugin-preload-fonts": "^3.21.0",
         "gatsby-plugin-react-helmet": "^5.21.0",
         "gatsby-plugin-robots-txt": "^1.7.1",
-        "gatsby-plugin-sharp": "^4.21.0",
+        "gatsby-plugin-sharp": "^4.24.0",
         "gatsby-plugin-sitemap": "^5.21.0",
         "gatsby-plugin-styled-components": "^5.21.0",
         "gatsby-remark-external-links": "0.0.4",
         "gatsby-remark-images": "^6.21.0",
-        "gatsby-source-filesystem": "^4.21.1",
+        "gatsby-source-filesystem": "^4.24.0",
+        "gatsby-source-graphql": "^4.24.0",
         "gatsby-source-strapi": "^2.0.0",
         "gatsby-transformer-remark": "^5.21.0",
-        "gatsby-transformer-sharp": "^4.21.0",
+        "gatsby-transformer-sharp": "^4.24.0",
         "prop-types": "^15.8.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
