--- a/backend/package.json
+++ b/backend/package.json
@@ -1,13 +1,16 @@
 {
   "dependencies": {
     "@strapi/plugin-graphql": "^4.0.5",
+    "@strapi/plugin-i18n": "4.4.1",
+    "@strapi/plugin-users-permissions": "4.4.1",
+    "@strapi/provider-upload-cloudinary": "^4.4.3",
+    "@strapi/strapi": "4.4.1",
+    "better-sqlite3": "7.4.6",
     "fs-extra": "^10.0.0",
     "lodash.set": "^4.3.2",
     "mime-types": "^2.1.27",
-    "@strapi/strapi": "4.3.4",
-    "@strapi/plugin-users-permissions": "4.3.4",
-    "@strapi/plugin-i18n": "4.3.4",
-    "better-sqlite3": "7.4.6"
+    "pg": "^8.8.0",
+    "pg-connection-string": "^2.5.0"
   },
   "name": "backend",
   "private": true,
@@ -19,7 +22,6 @@
     "build": "strapi build",
     "strapi": "strapi"
   },
-  "devDependencies": {},
   "author": {
     "name": "A Strapi developer"
   },
