--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "gatsby-plugin-manifest": "^5.9.0",
         "gatsby-plugin-netlify": "^5.0.1",
         "gatsby-plugin-offline": "^6.9.0",
+        "gatsby-plugin-react-helmet": "^6.9.0",
         "gatsby-plugin-robots-txt": "^1.7.1",
         "gatsby-plugin-sharp": "^5.9.0",
         "gatsby-plugin-sitemap": "^6.9.0",
