--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     ],
     "license": "MIT",
     "browserslist": "> 0.25%, not dead",
+    "engines" : { 
+        "npm" : ">=9.6.7",
+        "node" : ">=18.0.0"
+    },
     "scripts": {
         "build": "gatsby build",
         "clean": "gatsby clean",
